--- a/Mainsource/package.json
+++ b/Mainsource/package.json
@@ -26,6 +26,7 @@
     "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
     "primereact": "^10.9.7",
+    "quill": "^2.0.3",
     "rc-progress": "^4.0.0",
     "react": "^18.2.0",
     "react-calendar": "^5.1.0",
