--- a/Mainsource/package.json
+++ b/Mainsource/package.json
@@ -42,6 +42,7 @@
     "react-router-dom": "^7.0.1",
     "react-select": "^5.10.0",
     "react-table": "^7.8.0",
+    "react-time-picker": "^8.0.2",
     "react-toastify": "^11.0.5",
     "sweetalert2": "^11.26.4",
     "swiper": "^11.1.15",
