--- a/Mainsource/package.json
+++ b/Mainsource/package.json
@@ -21,7 +21,8 @@
     "datatables.net-react": "^1.0.0",
     "datatables.net-responsive-dt": "^3.0.3",
     "datatables.net-select-dt": "^2.1.0",
-    "jspdf": "^4.0.0",
+    "jspdf": "^4.2.0",
+    "jspdf-autotable": "^5.0.7",
     "material-react-table": "^3.1.0",
     "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
